fixed horizontal scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,14 @@
   font-family: sans-serif;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+
 body {
   background-color: black;
-  overflow-x: hidden;
 }
 
 @layer components {
